# fdf

./: CMakeLists.txt  Makefile  README.md  a.out  draw.c  fdf  fdf_structs.h  main.c  read_file.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
fdf.dSYM/Contents/Resources/DWARF/: fdf
file/minilibx_macos/: mlx_new_window.m
includes/: .fdf_structs.h.swp  fdf_structs.h
libft/: Makefile  author  ft_arrays.c  ft_atoi.c  ft_atoi_long.c  ft_bzero.c  ft_ftoa.c  ft_is_integer.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_itoa_big.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memdup.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_stradd.c  (+37 more)
libft/array_int/: arr_add.c  arr_cat.c  arr_del.c  arr_get.c  arr_len.c  arr_new.c  arr_print.c  arr_set.c  array_int.h  check_arr_input.c
libft/ft_printf/: color_redactor.c  digit_redactor.c  flag_analazer.c  ft_printf.c  ft_printf.h  ft_sprintf.c  specifier.c  str_redactor.c
libft/includes/: ft_printf.h  libft.h
libft/src/: ft_ftoa.c  ft_itoa.c  ft_itoa_base.c  ft_itoa_big.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memdup.c  ft_putendl.c  ft_putendl_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_stradd.c  ft_strdel.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strjoin_free.c  ft_strlcat.c  ft_strlower.c  ft_strmap.c  ft_strmapi.c  ft_strnequ.c  ft_strrchr.c  ft_strtrim.c  ft_strupper.c  get_next_line.c
src/: a.out  draw.c  isometric.c  key_macos.h  main.c  open_file.c  painting.c  read_file.c
