cmake_minimum_required(VERSION 3.15)
project(fdf_study)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(files)
include_directories(files/fdf)
include_directories(files/minilibx)
include_directories(files/minilibx_macos)
include_directories(files/minilibx_mms_20191025_beta)
include_directories(files/test_maps)
include_directories(libft)
include_directories(libft/array_int)
include_directories(libft/ft_printf)
include_directories(minilibx_macos)
include_directories(test_maps)

add_executable(fdf_study
        files/fdf/maps/42.fdf
        files/fdf/maps/elem-col.fdf
        files/fdf/maps/elem-fract.fdf
        files/fdf/maps/elem.fdf
        files/fdf/maps/elem2.fdf
        files/fdf/maps/julia.fdf
        files/fdf/maps/mars.fdf
        files/fdf/maps/t1.fdf
        files/fdf/maps/t2.fdf
        files/fdf/fdf
        files/minilibx/man/man3/mlx.1
        files/minilibx/man/man3/mlx_loop.1
        files/minilibx/man/man3/mlx_new_image.1
        files/minilibx/man/man3/mlx_new_window.1
        files/minilibx/man/man3/mlx_pixel_put.1
        files/minilibx/test/main.c
        files/minilibx/test/Makefile.gen
        files/minilibx/test/Makefile.mk
        files/minilibx/test/new_win.c
        files/minilibx/test/open.xpm
        files/minilibx/test/open24.xpm
        files/minilibx/test/open30.xpm
        files/minilibx/=README=
        files/minilibx/configure
        files/minilibx/libmlx_intel-mac.a
        files/minilibx/libmlx_OpenBSD.a
        files/minilibx/Makefile
        files/minilibx/Makefile.gen
        files/minilibx/Makefile.mk
        files/minilibx/mlx.h
        files/minilibx/mlx_clear_window.c
        files/minilibx/mlx_destroy_image.c
        files/minilibx/mlx_destroy_window.c
        files/minilibx/mlx_expose_hook.c
        files/minilibx/mlx_flush_event.c
        files/minilibx/mlx_get_color_value.c
        files/minilibx/mlx_get_data_addr.c
        files/minilibx/mlx_hook.c
        files/minilibx/mlx_init.c
        files/minilibx/mlx_int.h
        files/minilibx/mlx_int_anti_resize_win.c
        files/minilibx/mlx_int_do_nothing.c
        files/minilibx/mlx_int_get_visual.c
        files/minilibx/mlx_int_param_event.c
        files/minilibx/mlx_int_set_win_event_mask.c
        files/minilibx/mlx_int_str_to_wordtab.c
        files/minilibx/mlx_int_wait_first_expose.c
        files/minilibx/mlx_key_hook.c
        files/minilibx/mlx_lib_xpm.c
        files/minilibx/mlx_loop.c
        files/minilibx/mlx_loop_hook.c
        files/minilibx/mlx_mouse_hook.c
        files/minilibx/mlx_new_image.c
        files/minilibx/mlx_new_window.c
        files/minilibx/mlx_pixel_put.c
        files/minilibx/mlx_put_image_to_window.c
        files/minilibx/mlx_rgb.c
        files/minilibx/mlx_string_put.c
        files/minilibx/mlx_xpm.c
        files/minilibx/mlx_xpm.c.ok
        files/minilibx/rgb2c.pl
        files/minilibx_macos/man/man1/mlx.1
        files/minilibx_macos/man/man1/mlx_loop.1
        files/minilibx_macos/man/man1/mlx_new_image.1
        files/minilibx_macos/man/man1/mlx_new_window.1
        files/minilibx_macos/man/man1/mlx_pixel_put.1
        files/minilibx_macos/man/man3/mlx.1
        files/minilibx_macos/man/man3/mlx_loop.1
        files/minilibx_macos/man/man3/mlx_new_image.1
        files/minilibx_macos/man/man3/mlx_new_window.1
        files/minilibx_macos/man/man3/mlx_pixel_put.1
        files/minilibx_macos/_README_
        files/minilibx_macos/font.c
        files/minilibx_macos/font.xcf
        files/minilibx_macos/Makefile
        files/minilibx_macos/mlx.h
        files/minilibx_macos/mlx_init_loop.m
        files/minilibx_macos/mlx_int.h
        files/minilibx_macos/mlx_int_str_to_wordtab.c
        files/minilibx_macos/mlx_new_image.m
        files/minilibx_macos/mlx_new_window.h
        files/minilibx_macos/mlx_new_window.m
        files/minilibx_macos/mlx_rgb.c
        files/minilibx_macos/mlx_shaders.c
        files/minilibx_macos/mlx_xpm.c
        files/minilibx_mms_20191025_beta/font.c
        files/minilibx_mms_20191025_beta/interface.swift
        files/minilibx_mms_20191025_beta/Makefile
        files/minilibx_mms_20191025_beta/mlx.h
        files/minilibx_mms_20191025_beta/mlx_image.swift
        files/minilibx_mms_20191025_beta/mlx_init.swift
        files/minilibx_mms_20191025_beta/mlx_png.c
        files/minilibx_mms_20191025_beta/mlx_rgb.c
        files/minilibx_mms_20191025_beta/mlx_string_put.c
        files/minilibx_mms_20191025_beta/mlx_window.swift
        files/minilibx_mms_20191025_beta/mlx_xpm.c
        files/test_maps/10-2.fdf
        files/test_maps/10-70.fdf
        files/test_maps/100-6.fdf
        files/test_maps/20-60.fdf
        files/test_maps/42.fdf
        files/test_maps/50-4.fdf
        files/test_maps/basictest.fdf
        files/test_maps/elem.fdf
        files/test_maps/mars.fdf
        files/test_maps/pentenegpos.fdf
        files/test_maps/plat.fdf
        files/test_maps/pnp_flat.fdf
        files/test_maps/pylone.fdf
        files/test_maps/pyra.fdf
        files/test_maps/pyramide.fdf
        files/FDF.pdf
        files/sources.tgz
        libft/array_int/arr_add.c
        libft/array_int/arr_cat.c
        libft/array_int/arr_del.c
        libft/array_int/arr_get.c
        libft/array_int/arr_len.c
        libft/array_int/arr_new.c
        libft/array_int/arr_print.c
        libft/array_int/arr_set.c
        libft/array_int/array_int.h
        libft/array_int/check_arr_input.c
        libft/ft_printf/color_redactor.c
        libft/ft_printf/digit_redactor.c
        libft/ft_printf/flag_analazer.c
        libft/ft_printf/ft_printf.c
        libft/ft_printf/ft_printf.h
        libft/ft_printf/ft_sprintf.c
        libft/ft_printf/specifier.c
        libft/ft_printf/str_redactor.c
        libft/author
        libft/ft_arrays.c
        libft/ft_atoi.c
        libft/ft_atoi_long.c
        libft/ft_bzero.c
        libft/ft_ftoa.c
        libft/ft_is_integer.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_itoa_base.c
        libft/ft_itoa_big.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memdup.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_stradd.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_strindex.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strjoin_free.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strlower.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_strupper.c
        libft/ft_swap.c
        libft/ft_swapi.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_wdcounter.c
        libft/get_next_line.c
        libft/libft.a
        libft/libft.h
        libft/Makefile
        libft/README.md
        minilibx_macos/man/man1/mlx.1
        minilibx_macos/man/man1/mlx_loop.1
        minilibx_macos/man/man1/mlx_new_image.1
        minilibx_macos/man/man1/mlx_new_window.1
        minilibx_macos/man/man1/mlx_pixel_put.1
        minilibx_macos/man/man3/mlx.1
        minilibx_macos/man/man3/mlx_loop.1
        minilibx_macos/man/man3/mlx_new_image.1
        minilibx_macos/man/man3/mlx_new_window.1
        minilibx_macos/man/man3/mlx_pixel_put.1
        minilibx_macos/_README_
        minilibx_macos/font.c
        minilibx_macos/font.xcf
        minilibx_macos/Makefile
        minilibx_macos/mlx.h
        minilibx_macos/mlx_init_loop.m
        minilibx_macos/mlx_int.h
        minilibx_macos/mlx_int_str_to_wordtab.c
        minilibx_macos/mlx_new_image.m
        minilibx_macos/mlx_new_window.h
        minilibx_macos/mlx_new_window.m
        minilibx_macos/mlx_rgb.c
        minilibx_macos/mlx_shaders.c
        minilibx_macos/mlx_xpm.c
        test_maps/10-2.fdf
        test_maps/10-70.fdf
        test_maps/100-6.fdf
        test_maps/20-60.fdf
        test_maps/42.fdf
        test_maps/50-4.fdf
        test_maps/basictest.fdf
        test_maps/elem.fdf
        test_maps/mars.fdf
        test_maps/pentenegpos.fdf
        test_maps/plat.fdf
        test_maps/pnp_flat.fdf
        test_maps/pylone.fdf
        test_maps/pyra.fdf
        test_maps/pyramide.fdf
        a.out
        CMakeLists.txt
        fdf_structs.h
        main.c
        read_file.c)
