cmake_minimum_required(VERSION 3.15)
project(fdf_study)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(file)
include_directories(file/fdf)
include_directories(file/minilibx)
include_directories(file/minilibx_macos)
include_directories(file/minilibx_mms_20191025_beta)
include_directories(file/test_maps)
include_directories(libft)
include_directories(libft/array_int)
include_directories(libft/ft_printf)
include_directories(minilibx_macos)
include_directories(test_maps)

add_executable(fdf_study
        file/fdf/maps/42.fdf
        file/fdf/maps/elem-col.fdf
        file/fdf/maps/elem-fract.fdf
        file/fdf/maps/elem.fdf
        file/fdf/maps/elem2.fdf
        file/fdf/maps/julia.fdf
        file/fdf/maps/mars.fdf
        file/fdf/maps/t1.fdf
        file/fdf/maps/t2.fdf
        file/fdf/fdf
        file/minilibx/man/man3/mlx.1
        file/minilibx/man/man3/mlx_loop.1
        file/minilibx/man/man3/mlx_new_image.1
        file/minilibx/man/man3/mlx_new_window.1
        file/minilibx/man/man3/mlx_pixel_put.1
        file/minilibx/test/main.c
        file/minilibx/test/Makefile.gen
        file/minilibx/test/Makefile.mk
        file/minilibx/test/new_win.c
        file/minilibx/test/open.xpm
        file/minilibx/test/open24.xpm
        file/minilibx/test/open30.xpm
        file/minilibx/=README=
        file/minilibx/configure
        file/minilibx/libmlx_intel-mac.a
        file/minilibx/libmlx_OpenBSD.a
        file/minilibx/Makefile
        file/minilibx/Makefile.gen
        file/minilibx/Makefile.mk
        file/minilibx/mlx.h
        file/minilibx/mlx_clear_window.c
        file/minilibx/mlx_destroy_image.c
        file/minilibx/mlx_destroy_window.c
        file/minilibx/mlx_expose_hook.c
        file/minilibx/mlx_flush_event.c
        file/minilibx/mlx_get_color_value.c
        file/minilibx/mlx_get_data_addr.c
        file/minilibx/mlx_hook.c
        file/minilibx/mlx_init.c
        file/minilibx/mlx_int.h
        file/minilibx/mlx_int_anti_resize_win.c
        file/minilibx/mlx_int_do_nothing.c
        file/minilibx/mlx_int_get_visual.c
        file/minilibx/mlx_int_param_event.c
        file/minilibx/mlx_int_set_win_event_mask.c
        file/minilibx/mlx_int_str_to_wordtab.c
        file/minilibx/mlx_int_wait_first_expose.c
        file/minilibx/mlx_key_hook.c
        file/minilibx/mlx_lib_xpm.c
        file/minilibx/mlx_loop.c
        file/minilibx/mlx_loop_hook.c
        file/minilibx/mlx_mouse_hook.c
        file/minilibx/mlx_new_image.c
        file/minilibx/mlx_new_window.c
        file/minilibx/mlx_pixel_put.c
        file/minilibx/mlx_put_image_to_window.c
        file/minilibx/mlx_rgb.c
        file/minilibx/mlx_string_put.c
        file/minilibx/mlx_xpm.c
        file/minilibx/mlx_xpm.c.ok
        file/minilibx/rgb2c.pl
        file/minilibx_macos/man/man1/mlx.1
        file/minilibx_macos/man/man1/mlx_loop.1
        file/minilibx_macos/man/man1/mlx_new_image.1
        file/minilibx_macos/man/man1/mlx_new_window.1
        file/minilibx_macos/man/man1/mlx_pixel_put.1
        file/minilibx_macos/man/man3/mlx.1
        file/minilibx_macos/man/man3/mlx_loop.1
        file/minilibx_macos/man/man3/mlx_new_image.1
        file/minilibx_macos/man/man3/mlx_new_window.1
        file/minilibx_macos/man/man3/mlx_pixel_put.1
        file/minilibx_macos/_README_
        file/minilibx_macos/font.c
        file/minilibx_macos/font.xcf
        file/minilibx_macos/Makefile
        file/minilibx_macos/mlx.h
        file/minilibx_macos/mlx_init_loop.m
        file/minilibx_macos/mlx_int.h
        file/minilibx_macos/mlx_int_str_to_wordtab.c
        file/minilibx_macos/mlx_new_image.m
        file/minilibx_macos/mlx_new_window.h
        file/minilibx_macos/mlx_new_window.m
        file/minilibx_macos/mlx_rgb.c
        file/minilibx_macos/mlx_shaders.c
        file/minilibx_macos/mlx_xpm.c
        file/minilibx_mms_20191025_beta/font.c
        file/minilibx_mms_20191025_beta/interface.swift
        file/minilibx_mms_20191025_beta/Makefile
        file/minilibx_mms_20191025_beta/mlx.h
        file/minilibx_mms_20191025_beta/mlx_image.swift
        file/minilibx_mms_20191025_beta/mlx_init.swift
        file/minilibx_mms_20191025_beta/mlx_png.c
        file/minilibx_mms_20191025_beta/mlx_rgb.c
        file/minilibx_mms_20191025_beta/mlx_string_put.c
        file/minilibx_mms_20191025_beta/mlx_window.swift
        file/minilibx_mms_20191025_beta/mlx_xpm.c
        file/test_maps/10-2.fdf
        file/test_maps/10-70.fdf
        file/test_maps/100-6.fdf
        file/test_maps/20-60.fdf
        file/test_maps/42.fdf
        file/test_maps/50-4.fdf
        file/test_maps/basictest.fdf
        file/test_maps/elem.fdf
        file/test_maps/mars.fdf
        file/test_maps/pentenegpos.fdf
        file/test_maps/plat.fdf
        file/test_maps/pnp_flat.fdf
        file/test_maps/pylone.fdf
        file/test_maps/pyra.fdf
        file/test_maps/pyramide.fdf
        file/FDF.pdf
        file/sources.tgz
        libft/array_int/arr_add.c
        libft/array_int/arr_cat.c
        libft/array_int/arr_del.c
        libft/array_int/arr_get.c
        libft/array_int/arr_len.c
        libft/array_int/arr_new.c
        libft/array_int/arr_print.c
        libft/array_int/arr_set.c
        libft/array_int/array_int.h
        libft/array_int/check_arr_input.c
        libft/ft_printf/color_redactor.c
        libft/ft_printf/digit_redactor.c
        libft/ft_printf/flag_analazer.c
        libft/ft_printf/ft_printf.c
        libft/ft_printf/ft_printf.h
        libft/ft_printf/ft_sprintf.c
        libft/ft_printf/specifier.c
        libft/ft_printf/str_redactor.c
        libft/author
        libft/ft_arrays.c
        libft/ft_atoi.c
        libft/ft_atoi_long.c
        libft/ft_bzero.c
        libft/ft_ftoa.c
        libft/ft_is_integer.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_itoa_base.c
        libft/ft_itoa_big.c
        libft/ft_lstadd.c
        libft/ft_lstdel.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memdup.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_stradd.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_strindex.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strjoin_free.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strlower.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_strupper.c
        libft/ft_swap.c
        libft/ft_swapi.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/ft_wdcounter.c
        libft/get_next_line.c
        libft/libft.a
        libft/libft.h
        libft/Makefile
        libft/README.md
        minilibx_macos/man/man1/mlx.1
        minilibx_macos/man/man1/mlx_loop.1
        minilibx_macos/man/man1/mlx_new_image.1
        minilibx_macos/man/man1/mlx_new_window.1
        minilibx_macos/man/man1/mlx_pixel_put.1
        minilibx_macos/man/man3/mlx.1
        minilibx_macos/man/man3/mlx_loop.1
        minilibx_macos/man/man3/mlx_new_image.1
        minilibx_macos/man/man3/mlx_new_window.1
        minilibx_macos/man/man3/mlx_pixel_put.1
        minilibx_macos/_README_
        minilibx_macos/font.c
        minilibx_macos/font.xcf
        minilibx_macos/Makefile
        minilibx_macos/mlx.h
        minilibx_macos/mlx_init_loop.m
        minilibx_macos/mlx_int.h
        minilibx_macos/mlx_int_str_to_wordtab.c
        minilibx_macos/mlx_new_image.m
        minilibx_macos/mlx_new_window.h
        minilibx_macos/mlx_new_window.m
        minilibx_macos/mlx_rgb.c
        minilibx_macos/mlx_shaders.c
        minilibx_macos/mlx_xpm.c
        test_maps/10-2.fdf
        test_maps/10-70.fdf
        test_maps/100-6.fdf
        test_maps/20-60.fdf
        test_maps/42.fdf
        test_maps/50-4.fdf
        test_maps/basictest.fdf
        test_maps/elem.fdf
        test_maps/mars.fdf
        test_maps/pentenegpos.fdf
        test_maps/plat.fdf
        test_maps/pnp_flat.fdf
        test_maps/pylone.fdf
        test_maps/pyra.fdf
        test_maps/pyramide.fdf
        CMakeLists.txt
        includes/fdf_structs.h
        src/main.c
        src/read_file.c)
